# metric-catalog

./: main.py  pyproject.toml  server.py  tools.py
data/: metric_catalog.json  metric_catalog.xlsx  metrics.csv  metrics.json
data/metadata_catalog/: meta_data2.json  metadata.json
factories/: attribute_metadata_factory.py
models/: __init__.py
registry/: catalog_registry.py  metadata_catalog_registry.py
repositories/: MetricCatalogRepository.py
repositories/AttributeMetadataRepository/: IAttributeMetadataRepository.py
repositories/AttributeMetadataRepository/impl/: JsonAttributeMetadataRepository.py  MemoryAttributeMetadataRepository.py
repositories/MetricCatalogRepository/: IMetricCatalogRepository.py
repositories/MetricCatalogRepository/impl/: CSVMetricCatalogRepository.py  ExcelMetricCatalogRepository.py  JSONMetricCatalogRepository.py
repositories/NormalizedCatalogRepository/: INormalizedMetricCatalogRepository.py
repositories/NormalizedCatalogRepository/impl/: JSONNormalizedMetricCatalogRepository.py  memory.py
repositories/impl/: CSVMetricCatalogRepository.py  ExcelMetricCatalogRepository.py  JsonMetricCatalogRepository.py
services/: CatalogNormalizerService.py  CatalogService.py  MetadataCatalogService.py  catalog_introspection_service.py  catalog_service.py
tests/: normalizer_service.py  service_metada_data_combiner.py  service_metadata_attributes_catalog.py  service_metric_catalog.py
tests/mock_data/: mock_catalog.json  mock_metadata.json
