[project]
name = "mcp-metric-catalog-server-fastmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5.2",
    "httpx>=0.28.1",
    "inflect>=7.5.0",
    "mcp-server>=0.1.4",
    "mcp[cli]>=1.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
